add markup and basic style in the project

--- a/index.html
+++ b/index.html
@@ -5,13 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Secret message</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;1,500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/73cf130a3e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <img src="img/wave.png" alt="green wave" class="wave">
+
+    <div class="container">
+
+        <div class="question-container">
+            <ul class="question-container__list" style="list-style-type: circle;">
+                <li class="question-container__item"><label for="pass">1+1</label><input id="pass" type="text"></li>
+                <li class="question-container__item"><label for="pass">1+2</label><input id="pass" type="text"></li>
+                <li class="question-container__item"><label for="pass">1+2</label><input id="pass" type="text"></li>
+            </ul>
+        </div>
+        <div class="img">
+            <img src="img/undraw_happy_women_day_fbjt.svg" alt="happy women day">
+        </div>
+        <div class="answer-container">
+            <h2 class="answer-container__title" >Message </h1>
+                <div class="answer-container__wrapper"></div>
+
+        </div>
+
+
+
+    </div>
+
+
     <script src="main.js"></script>
 </body>
 
