--- a/index.html
+++ b/index.html
@@ -15,29 +15,53 @@
 <body>
     <img src="img/wave.png" alt="green wave" class="wave">
 
-    <div class="container">
+    <div class="main-wrapper">
 
-        <div class="question-container">
-            <ul class="question-container__list" style="list-style-type: circle;">
-                <li class="question-container__item"><label for="pass-1">Jak ma na nazwisko Natalka ?</label><input id="pass-1" type="text"></li>
-                <li class="question-container__item"><label for="pass-2">Jak ja mam na nazwisko ?</label><input id="pass-2" type="text"></li>
-                <li class="question-container__item"><label for="pass-3">Cz kochamy pracować w H&M Tak/Nie ? </label><input id="pass-3" type="text"></li>
-            </ul>
-        </div>
-        <div class="img">
-            <img src="img/undraw_happy_women_day_fbjt.svg" alt="happy women day">
-        </div>
-        <div class="answer-container">
-            <h2 class="answer-container__title">Message </h1>
-                <div class="answer-container__wrapper"></div>
-
+        <div class="question-container__header">
+            <h1 class="container__title"> Hej ! 👋</h1>
+            <p class="question-container__description">Odpowiedź na pytania poniżej i odkryj wiadomość, <br>która cię zaskoczy albo już dawno o tym wiedziałaś 😁 </p>
         </div>
 
+        <div class="container">
+            <div class="question-container">
+                <div class="question-container__wrapper">
+                    <label class="question-container__label" for="pass-1">Jak ma na nazwisko Natalka ?</label>
+                    <input class="question-container__input" id="pass-1" type="text">
+                </div>
+                <div class="question-container__wrapper">
+                    <label class="question-container__label" for="pass-2">Jak ja mam na nazwisko ?</label>
+                    <input class="question-container__input" id="pass-2" type="text">
+                </div>
 
+                <div class="question-container__wrapper">
+                    <label class="question-container__label" for="pass-3">Cz kochamy pracować w H&M Tak/Nie ? </label>
+                    <input class="question-container__input" id="pass-3" type="text">
+                </div>
+
+                <div class="question-container__wrapper">
+                    <label class="question-container__label" for="pass-4">Czy myślisz że jesteśmy parą Tak/Nie ? </label>
+                    <input class="question-container__input" id="pass-4" type="text">
+                </div>
+
+
+
+
+
+            </div>
+            <div class="img">
+                <img src="img/undraw_happy_women_day_fbjt.svg" alt="happy women day">
+            </div>
+            <div class="answer-container">
+                <h2 class="answer-container__title">Message </h1>
+                    <div class="answer-container__wrapper"></div>
+
+            </div>
+
+
+
+        </div>
 
     </div>
-
-
     <script src="main.js"></script>
 </body>
 
