add mobile and tablet version

--- a/index.html
+++ b/index.html
@@ -43,16 +43,12 @@
                     <input class="question-container__input" id="pass-4" type="text">
                 </div>
 
-
-
-
-
             </div>
             <div class="img">
                 <img src="img/undraw_happy_women_day_fbjt.svg" alt="happy women day">
             </div>
             <div class="answer-container">
-                <h2 class="answer-container__title">Message </h1>
+                <h2 class="answer-container__title">Wiadomość </h1>
                     <div class="answer-container__wrapper"></div>
 
             </div>
