change style in question container, reordering components for mobile and tablet versions

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="question-container__header">
             <h1 class="container__title"> Hej ! 👋</h1>
-            <p class="question-container__description">Odpowiedź na pytania poniżej i odkryj wiadomość, <br>która cię zaskoczy albo już dawno o tym wiedziałaś 😁 </p>
+            <p class="question-container__description">Odpowiedź na pytania poniżej i odkryj wiadomości, <br>która cię zaskoczą albo już dawno o tym wiedziałaś 😁 </p>
         </div>
 
         <div class="container">
