change style for starting use BEM

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 
     <div class="main-wrapper">
 
-        <div class="question-container__header">
-            <h1 class="container__title"> Hej ! 👋</h1>
-            <p class="question-container__description">Odpowiedź na pytania poniżej i odkryj wiadomości, <br>która cię zaskoczą albo już dawno o tym wiedziałaś 😁 </p>
-        </div>
+        <header class="header">
+            <h1 class="header__title"> Hej ! 👋</h1>
+            <p class=" header__description">Odpowiedź na pytania poniżej i odkryj wiadomości, <br>które cię zaskoczą
+                albo już dawno o tym wiedziałaś 😁 </p>
+        </header>
 
         <div class="container">
             <div class="question-container">
@@ -39,7 +40,8 @@
                 </div>
 
                 <div class="question-container__wrapper">
-                    <label class="question-container__label" for="pass-4">Czy myślisz że jesteśmy parą Tak/Nie ? </label>
+                    <label class="question-container__label" for="pass-4">Czy myślisz że jesteśmy parą Tak/Nie ?
+                    </label>
                     <input class="question-container__input" id="pass-4" type="text">
                 </div>
 
@@ -49,7 +51,9 @@
             </div>
             <div class="answer-container">
                 <h2 class="answer-container__title">Wiadomość </h1>
-                    <div class="answer-container__wrapper"></div>
+                    <div class="answer-container__wrapper">
+
+                    </div>
 
             </div>
 
