--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;1,500&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/73cf130a3e.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
