add sass files and change style

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
 
                 <div class="question-container__wrapper">
-                    <label class="question-container__label" for="pass-4">Czy myślisz że jesteśmy parą Tak/Nie ?
+                    <label class="question-container__label" for="pass-4">Czy lubię Harrego Pottera Tak/Nie ?
                     </label>
                     <input class="question-container__input" id="pass-4" type="text">
                 </div>
