updated questions and answers on the site

--- a/index.html
+++ b/index.html
@@ -18,28 +18,30 @@
 
         <header class="header">
             <h1 class="header__title"> Hej ! 👋</h1>
-            <p class=" header__description">Odpowiedź na pytania poniżej i odkryj wiadomości, <br>które cię zaskoczą
-                albo już dawno o tym wiedziałaś 😁 </p>
+            <p class=" header__description">
+                Answer the questions below and<br> find out something new about me 😁 </p>
         </header>
 
         <div class="container">
             <div class="question-container">
                 <div class="question-container__wrapper">
-                    <label class="question-container__label" for="pass-1">Jak ma na nazwisko Natalka ?</label>
+                    <label class="question-container__label" for="pass-1">What country Do I live right now ?</label>
                     <input class="question-container__input" id="pass-1" type="text">
                 </div>
                 <div class="question-container__wrapper">
-                    <label class="question-container__label" for="pass-2">Jak ja mam na nazwisko ?</label>
+                    <label class="question-container__label" for="pass-2">What is my favorite season of the year?
+                    </label>
                     <input class="question-container__input" id="pass-2" type="text">
                 </div>
 
                 <div class="question-container__wrapper">
-                    <label class="question-container__label" for="pass-3">Cz kochamy pracować w H&M Tak/Nie ? </label>
+                    <label class="question-container__label" for="pass-3">What is my favorite football team ? (Champions
+                        League) </label>
                     <input class="question-container__input" id="pass-3" type="text">
                 </div>
 
                 <div class="question-container__wrapper">
-                    <label class="question-container__label" for="pass-4">Czy lubię Harrego Pottera Tak/Nie ?
+                    <label class="question-container__label" for="pass-4">Do I like watching Harry Potter Yes / No ?
                     </label>
                     <input class="question-container__input" id="pass-4" type="text">
                 </div>
@@ -49,10 +51,11 @@
                 <img src="img/undraw_happy_women_day_fbjt.svg" alt="happy women day">
             </div>
             <div class="answer-container">
-                <h2 class="answer-container__title">Wiadomość </h1>
-                    <div class="answer-container__wrapper">
+                <h2 class="answer-container__title">
+                    Message</h2>
+                <div class="answer-container__wrapper">
 
-                    </div>
+                </div>
 
             </div>
 
